# so4-oracle

./: .dev.vars  .gitignore  Cargo.toml  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  fly.toml  oracle.service  plan.md  railway.json
.github/workflows/: ci.yml
apis/: Cargo.toml  README.md
apis/src/: client.rs  config.rs  main.rs  server.rs  state.rs
apis/tests/: api_tests.rs  server_layers_tests.rs
config/: tokens.json
contracts/: addresses.toml
contracts/src/: data_store.rs  decrease_position_utils.rs  increase_position_utils.rs  keys.rs  lib.rs  liquidity_handler.rs  order_handler.rs  position_handler.rs  position_utils.rs  reader.rs  swap_utils.rs  types.rs
contracts/test_snapshots/: test_cancel_expired_order_uses_separate_market_and_limit_expiry.1.json  test_create_market_counter_increments.1.json  test_create_market_default_config.1.json  test_create_market_stores_config_in_data_store.1.json  (+30 more)
docs/: ORACLE_UPDATE_IMPLEMENTATION_PLAN.md
oracle/: .env.example  Cargo.toml  README.md
oracle/src/: auth.rs  binance.rs  coinbase.rs  config.rs  fixed.rs  http.rs  keeper.rs  keeper_loop.rs  kv_store.rs  lib.rs  log.rs  main.rs  metrics.rs  network_config.rs  price.rs  price_loop.rs  prices.rs  pyth.rs  reader.rs  retry.rs  ring_buffer.rs  scval.rs  signing.rs  state.rs  stellar_rpc.rs  submit.rs  tx_builder.rs
oracle/src/api/: admin.rs  mod.rs  prices.rs
oracle/src/chain/: mod.rs  scval.rs  tx_builder.rs
oracle/tests/: admin_endpoints_integration.rs  health_ready_integration.rs  keeper_cycle_integration.rs  mock_rpc_integration.rs  price_cycle_last_updated.rs  price_cycle_ledger_failure.rs  price_cycle_log_latency.rs  price_cycle_token_failure.rs
(+10 files in other folders)
