[package]
name = "apis"
version = "0.1.0"
edition = "2021"
authors = ["ibrahimijai <sunday.m1701072@st.futminna.edu.ng>"]

[[bin]]
name = "apis"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
